@@ -5,6 +5,7 @@ v3.4.0 to
 - (bugfix) Slight change to action F formating, for increased consistancy.
 - Prevent the beautifier from adding newlines after the end of a sprite.
 - Fix: Version number is revision in hex digits, not converted to hex.
+- Fix: LOCATEID2 now reports the correct feature byte.
 
 v3.3.1 to v3.4.0 (r688)
 - (devel) Can now make the version without \w<date> with NO_BOOST=1.
